[gd_scene load_steps=3 format=3 uid="uid://fi7nwkte06g2"]

[ext_resource type="PackedScene" uid="uid://y3vtx0e0shv4" path="res://addons/maaacks_game_template/extras/scenes/overlaid_menus/level_won_menu.tscn" id="1_u6s5d"]
[ext_resource type="Script" uid="uid://dteftaisqmva4" path="res://scenes/overlaid_menus/level_won_menu.gd" id="2_wqvle"]

[node name="LevelWonMenu" instance=ExtResource("1_u6s5d")]
script = ExtResource("2_wqvle")

[node name="DescriptionLabel" parent="MenuPanelContainer/MarginContainer/BoxContainer/DescriptionMargin" index="0"]
custom_minimum_size = Vector2(0, 35.39)
theme_override_font_sizes/normal_font_size = 40

[node name="ScoreMarginText" type="MarginContainer" parent="MenuPanelContainer/MarginContainer/BoxContainer" index="2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_top = 10

[node name="ScoreLabel" type="RichTextLabel" parent="MenuPanelContainer/MarginContainer/BoxContainer/ScoreMarginText" index="0"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 26
bbcode_enabled = true
text = "[center]Score:[/center]"
scroll_active = false

[node name="ScoreMargin" type="MarginContainer" parent="MenuPanelContainer/MarginContainer/BoxContainer" index="3"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_bottom = 5

[node name="ScoreLabel" type="RichTextLabel" parent="MenuPanelContainer/MarginContainer/BoxContainer/ScoreMargin" index="0"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 35.39)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "1000000"
scroll_active = false
horizontal_alignment = 1

[node name="HighscoreMagin" type="MarginContainer" parent="MenuPanelContainer/MarginContainer/BoxContainer" index="4"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="HighscoreLabel" type="RichTextLabel" parent="MenuPanelContainer/MarginContainer/BoxContainer/HighscoreMagin" index="0"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "Highscore: 1000000"
scroll_active = false
horizontal_alignment = 1

[node name="NewHighscoreMagin" type="MarginContainer" parent="MenuPanelContainer/MarginContainer/BoxContainer" index="5"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="NewHighscoreLabel" type="RichTextLabel" parent="MenuPanelContainer/MarginContainer/BoxContainer/NewHighscoreMagin" index="0"]
modulate = Color(0.42, 1, 0.565, 1)
custom_minimum_size = Vector2(0, 35.39)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "NEW HIGHSCORE!"
scroll_active = false
horizontal_alignment = 1
